<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColor"
        android:hint="@string/hint_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColor"
        android:password="true"
        android:hint="@string/hint_password"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/login_btn_text"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_blue_selector" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_login_by_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/share_icon_qq_selector"/>

        <ImageView
            android:id="@+id/iv_login_by_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/share_icon_wechat_selector"/>

        <ImageView
            android:id="@+id/iv_login_by_sinaweibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/share_icon_sinaweibo_selector"/>

    </LinearLayout>

</LinearLayout>