<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/layout_item_bg"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            style="@style/h_line"
            android:layout_marginTop="20dp" />

        <RelativeLayout
            android:id="@+id/rl_accept"
            style="@style/option_item_rl">

            <TextView
                style="@style/option_item_text"
                android:text="@string/setting_notification_accept" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/tb_accpet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View style="@style/h_line"/>
        <View style="@style/h_line" android:layout_marginTop="20dp" />

        <RelativeLayout
            android:id="@+id/rl_voice"
            style="@style/option_item_rl">

            <TextView
                style="@style/option_item_text"
                android:text="@string/setting_notification_voice" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/tb_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <View style="@style/h_line" />

        <RelativeLayout
            android:id="@+id/rl_vibration"
            style="@style/option_item_rl">

            <TextView
                style="@style/option_item_text"
                android:text="@string/setting_notification_vibration" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/tb_vibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <View style="@style/h_line"/>
        <View style="@style/h_line" android:layout_marginTop="20dp" />

        <RelativeLayout
            android:id="@+id/rl_app_exit"
            style="@style/option_item_rl">

            <TextView
                style="@style/option_item_text"
                android:text="@string/setting_notification_app_exit" />


            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/tb_exit_no_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <View style="@style/h_line" />
    </LinearLayout>


</ScrollView>