<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/user_center_bg"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true">

        <com.yizhui.oschina.widget.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/iv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_avatar"
            android:layout_alignRight="@id/iv_avatar" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:clickable="true"
            android:src="@drawable/icon_qr_code" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#18be40" />

    <LinearLayout
        android:id="@+id/ll_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <LinearLayout
            android:id="@+id/ll_my_score"
            style="@style/my_info_item_ll">

            <TextView
                style="@style/my_info_item_text"
                android:text="@string/my_score" />

            <TextView
                android:id="@+id/tv_score"
                style="@style/my_info_item_info"
                android:text="5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_favorite"
            style="@style/my_info_item_ll">

            <TextView
                style="@style/my_info_item_text"
                android:text="@string/my_favorite" />

            <TextView
                android:id="@+id/tv_favorite"
                style="@style/my_info_item_info"
                android:text="5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_following"
            style="@style/my_info_item_ll">

            <TextView
                style="@style/my_info_item_text"
                android:text="@string/my_following" />

            <TextView
                android:id="@+id/tv_following"
                style="@style/my_info_item_info"
                android:text="10" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_fans"
            style="@style/my_info_item_ll">

            <TextView
                style="@style/my_info_item_text"
                android:text="@string/my_fans" />

            <TextView
                android:id="@+id/tv_fans"
                style="@style/my_info_item_info"
                android:text="15" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>